fix: fix project yaml bug

--- a/project.yml
+++ b/project.yml
@@ -3,7 +3,7 @@ settings:
   MARKETING_VERSION: "1.0"
   CURRENT_PROJECT_VERSION: 1
 options:
-  bundleIdPrefix: test
+  bundleIdPrefix: com.anthony-gufron
   deploymentTarget:
     MACOSX_DEPLOYMENT_TARGET: "15.0"
 targets:
@@ -22,8 +22,6 @@ targets:
         UIApplicationSupportsIndirectInputEvents: YES
         UIApplicationSceneManifest:
           UIApplicationSupportsMultipleScenes: YES
-        UISupportedInterfaceOrientations~iphone:
-          [UIInterfaceOrientationPortrait, UIInterfaceOrientationLandscapeLeft, UIInterfaceOrientationLandscapeRight]
     settings:
       PRODUCT_BUNDLE_IDENTIFIER: com.anthony-gufron.buzz-appTests
       INFOPLIST_FILE: buzz-app/Info.plist
@@ -35,18 +33,16 @@ targets:
       - target: buzz-app
     settings:
       base:
-        TEST_HOST: "$(BUILT_PRODUCTS_DIR)/buzz-app.app/buzz-app"
-        BUNDLE_LOADER: "$(TEST_HOST)"
         INFOPLIST_FILE: buzz-app/Info.plist
 schemes:
-  APIHit:
+  buzz-app:
     build:
       targets:
         buzz-app: all
         buzz-appTests: all
     test:
       targets:
-      - name: buzz-appTests
+        - name: buzz-appTests
       gatherCoverageData: true
        
 
