--- a/project.yml
+++ b/project.yml
@@ -13,9 +13,9 @@ targets:
     platform: macOS
     sources: [buzz-app]
     resources: [Resources]
-    buildSettings:
-      ENABLE_TESTABILITY: YES
-      DEFINES_MODULE: YES
+#    buildSettings:
+#      ENABLE_TESTABILITY: YES
+#      DEFINES_MODULE: YES
     info:
       path: buzz-app/Info.plist
       properties:
@@ -28,6 +28,7 @@ targets:
           UIApplicationSupportsMultipleScenes: YES
     settings:
       INFOPLIST_FILE: buzz-app/Info.plist
+      ENABLE_TESTABILITY: YES
   buzz-appTests:
     type: bundle.unit-test
     platform: macOS
@@ -39,6 +40,7 @@ targets:
       - target: buzz-app
     settings:
       PRODUCT_BUNDLE_IDENTIFIER: com.anthony-gufron.buzz-appTests
+      ENABLE_TESTABILITY: YES
       base:
         INFOPLIST_FILE: buzz-app/Info.plist
 schemes:
