--- a/project.yml
+++ b/project.yml
@@ -26,6 +26,7 @@ targets:
         UIApplicationSupportsIndirectInputEvents: YES
         UIApplicationSceneManifest:
           UIApplicationSupportsMultipleScenes: YES
+        LSApplicationCategoryType: public.app-category.productivity
     settings:
       INFOPLIST_FILE: buzz-app/Info.plist
       ENABLE_TESTABILITY: YES
