--- a/project.yml
+++ b/project.yml
@@ -31,9 +31,12 @@ targets:
           UIApplicationSupportsMultipleScenes: YES
         LSApplicationCategoryType: public.app-category.productivity
         ATSApplicationFontsPath: .
-          # - ./TAHOMAB0.ttf
-          # - ./OpenDyslexic.ttf
-          # - ./OpenSans.ttf
+        CFBundleDocumentTypes: # Declare document types the app can open
+          - CFBundleTypeName: PDF Document
+            CFBundleTypeRole: Viewer
+            LSHandlerRank: Alternate
+            LSItemContentTypes:
+              - com.adobe.pdf
     settings:
       INFOPLIST_FILE: buzz-app/Info.plist
       ENABLE_TESTABILITY: YES
