--- a/Polaread-Extension/Info.plist
+++ b/Polaread-Extension/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+	<string>com.anthony-gufron.buzz-app.Polaread-Extension</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -20,13 +20,10 @@
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>NSExtension</key>
 	<dict>
-		<key>NSExtensionAttributes</key>
-		<dict>
-			<key>WKAppBoundDomains</key>
-			<array/>
-		</dict>
 		<key>NSExtensionPointIdentifier</key>
-		<string>com.apple.Safari.web-extension</string>
+		<string>com.apple.extensions.polaread</string>
+		<key>NSExtensionPrincipalClass</key>
+		<string>PolareadExtension</string>
 	</dict>
 </dict>
 </plist>
